spade-tests/src/snapshots/spade_tests__ast_lowering__expect_entity_got_pipeline_error_works.snap
---
source: spade-tests/src/ast_lowering.rs
---
pipeline(0) x(clk: clock) -> bool {true}

entity test(clk: clock) -> bool {
    inst x(clk)
}

error: Expected pipeline depth
  ┌─ testinput:4:5
  │
1 │ pipeline(0) x(clk: clock) -> bool {true}
  │ ----------- x is defined as a pipeline here
  ·
4 │     inst x(clk)
  │     ^^^^ - Because x is a pipeline
  │     │     
  │     Expected pipeline depth
  │
  = Consider specifying the pipeline depth
  │
4 │     inst(/*depth*/) x(clk)
  │         +++++++++++
