spade-tests/src/snapshots/spade_tests__ast_lowering__expect_pipeline_got_entity_error_works.snap
---
source: spade-tests/src/ast_lowering.rs
---
entity x(clk: clock) -> bool {true}

entity test(clk: clock) -> bool {
    inst(0) x(clk)
}

error: Unexpected pipeline depth for entity
  ┌─ testinput:4:5
  │
1 │ entity x(clk: clock) -> bool {true}
  │ ------ x is defined as an entity here
  ·
4 │     inst(0) x(clk)
  │     ^^^^^^^ - Because x is an entity
  │     │        
  │     Expected plain `inst`
  │
  = Consider removing the pipeline depth
  │
4 │     inst x(clk)
  │     ~~~~
