spade-tests/src/snapshots/spade_tests__ast_lowering__extended_self_referential_use_lookup_breaks.snap
---
source: spade-tests/src/ast_lowering.rs
---
use x::y;
use y::x;


error: Use of undeclared name x::y
  ┌─ testinput:1:5
  │
1 │ use x::y;
  │     ^^^^ Undeclared name
