spade-tests/src/snapshots/spade_tests__ast_lowering__extern_fn_methods_produce_error.snap
---
source: spade-tests/src/ast_lowering.rs
---
struct X {}
impl X {
    extern fn x(self, x: bool) -> bool;
}


error: Methods cannot be `extern`
  ┌─ testinput:3:5
  │
3 │     extern fn x(self, x: bool) -> bool;
  │     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  │
  = help: Consider defining a free-standing function
