spade-tests/src/snapshots/spade_tests__ast_lowering__impl_trait_type_cannot_be_used_as_enum_variant_members.snap
---
source: spade-tests/src/ast_lowering.rs
---
trait T {}
enum E {
    V { x: impl T },
}


error: `impl Trait` syntax cannot be used in this context
  ┌─ testinput:3:12
  │
3 │     V { x: impl T },
  │            ^^^^^^ `impl Trait` type cannot be used in this context
  │
  = note: `impl Trait` can only be used inside unit parameters
